--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -3,5 +3,38 @@
     <h2 class="card-title h5">Description</h2>
     <p class="card-text">{{ site.description }}</p>
     <a class="btn btn-primary" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
+    <p class="card-text mt-5">
+      <p>The Tellalian Collection—a stunning assemblage of more than 30 late antique textiles from Egypt—was acquired by Boston College in 2018, and has since been housed at the <a href="https://www.bc.edu/sites/artmuseum/" target="_blank">McMullen Museum of Art</a>. The textiles (traditionally known as “Coptic" textiles) range in date from roughly the 4th to 9th centuries, and together represent one of the most important such collections in an American university museum.</p>
+
+      <figure class="flex flex-col justify-start items-center">
+          <img alt="Photograph of two late antique tapestry roundels. Each with the image of a person in the middle, srrounded by orange and green designs" src="{{ 'assets/collection/2018.2.jpg' | relative_url }}">
+          <figcaption>
+              <small>
+                  Fragmented Tapestry Roundels<br />
+                  5th-6th century<br />
+                  McMullen Museum of Art<br />
+                  <em>Public Domain</em>
+              </small>
+          </figcaption>
+      </figure>
+
+      <p>The Tellalian textiles span six centuries, five empires, and twenty-plus generation of ordinary humans. These objects would have served both decorative and practical purposes over the course of their material lives, from clothing and tapestries to burial shrouds and religious artwork. Artistic agency and autonomy define the Tellalian textiles, and the delightfully ambiguous nature of their iconographic and decorative programs raise many interesting questions about daily life in late antique and early medieval Egypt.</p>
+
+      <p>This project represents a new stage in the life of the Tellalian Collection. Created with public access in mind, the website author has sought to provide a digital space in which anyone, regardless of expertise, may access images of and information related to these beautiful objects.</p>
+
+      <p>To view the Collection in its entirety, please click on the "Browse" tab above and scroll through the various object pages. Each textile's individual page is accompanied by a brief "object biography," full metadata, and an interactive zoomable image. More extensive commentary may be found by clicking the "Essays" tab, also accessible above. These essays provide brief interpretive and historical commentaries that help contextualize the Collection in its historical and museological milieu, and as the project expands, future writing will be added to the page. A representative bibliography rounds out the website, providing resources and links for further reading and research.</p>
+
+      <figure class="flex flex-col justify-start items-center">
+          <img alt="Photograph of a late antique long band of tapestry, with stylized designs of hares, birds, fruits, and leaves" src="{{ 'assets/collection/2018.5.jpg' | relative_url }}">
+          <figcaption>
+              <small>
+                  Tapestry Band with Hares, Birds, Fruits, and Leaves<br />
+                  5th century<br />
+                  McMullen Museum of Art<br />
+                  <em>Public Domain</em>
+              </small>
+          </figcaption>
+      </figure>
+    </p>
   </div>
 </div>
