--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -2,3 +2,20 @@
     Put your custom SCSS here! 
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
 */
+
+.bibliography {
+    list-style: decimal;
+    list-style-position: outside; /* Ensure list markers are outside */
+    padding-left: 1em; /* General padding for all list items */
+}
+.bibliography li {
+    text-indent: -1em; /* Negative indent for the first line */
+    padding-left: 1em; /* Indent the whole item to account for the list marker */
+    margin-left: 1em; /* Shift the whole list item to the right */
+}
+.bibliography li::marker {
+    margin-left: -1em; /* Adjust marker position */
+}
+.bibliography li a {
+    text-decoration: none;
+}
